--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/node-logger": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.8",
-    "@storybook/testing-react": "^0.0.10"
+    "@storybook/testing-react": "^0.0.10",
+    "chromatic": "^5.9.0"
   }
 }
